# CMake

00_hello_world/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
02_hello_world_OutOfSource_New/: CMakeLists.txt
03_hello_world_Install/: CMakeLists.txt
03_hello_world_Install/src/: CMakeLists.txt
04_hello_world_StaticLib/: CMakeLists.txt
04_hello_world_StaticLib/lib/: CMakeLists.txt  hello.c
05_hello_world_SharedLib/lib/: CMakeLists.txt
06_hello_world_SharedLib_Install/: CMakeLists.txt
06_hello_world_SharedLib_Install/lib/: CMakeLists.txt  hello.h
07_hello_world_SharedLib_Use/: CMakeLists.txt
07_hello_world_SharedLib_Use/src/: CMakeLists.txt  main.c
08_hello_world_Variable/: CMakeLists.txt
08_hello_world_Variable/src/: CMakeLists.txt
09_hello_world_FindHello/: CMakeLists.txt
09_hello_world_FindHello/cmake/: FindHELLO.cmake
09_hello_world_FindHello/src/: CMakeLists.txt
