cmake_minimum_required(VERSION 3.10)
project(HELLO)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
add_subdirectory(src)
install(CODE "MESSAGE(\"Sample install message.\")")
install(FILES COPYRIGHT DESTINATION share/doc/cmake/t2)
install(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
install(PROGRAMS runhello.sh DESTINATION bin)