cmake_minimum_required(VERSION 3.10)
project(VARIABLES)
add_subdirectory(src)
message(STATUS "Variables:CMAKE_BINARY_DIR:" ${CMAKE_BINARY_DIR}
",PROJECT_BINARY_DIR" ${PROJECT_BINARY_DIR}
",VARIABLES_BINARY_DIR" ${VARIABLES_BINARY_DIR})
message(STATUS "Variables:CMAKE_SOURCE_DIR:" ${CMAKE_SOURCE_DIR}
",PROJECT_SOURCE_DIR" ${PROJECT_SOURCE_DIR}
",VARIABLES_SOURCE_DIR" ${VARIABLES_SOURCE_DIR})

message(STATUS "Variables:CMAKE_CURRENT_LIST_FILE:" ${CMAKE_CURRENT_LIST_FILE})
message(STATUS "Variables:CMAKE_CURRENT_LIST_LINE:" ${CMAKE_CURRENT_LIST_LINE})
message(STATUS "Variables:EXECUTABLE_OUTPUT_PATH:" ${EXECUTABLE_OUTPUT_PATH})
message(STATUS "Variables:LIBRARY_OUTPUT_PATH:" ${LIBRARY_OUTPUT_PATH})
message(STATUS "Variables:PROJECT_NAME:" ${PROJECT_NAME})
